--- a/scss/pirateborg/_item-list.scss
+++ b/scss/pirateborg/_item-list.scss
@@ -16,6 +16,14 @@
     margin: 0;
     padding: 0;
     margin-bottom: 16px;
+
+    .item-create-button {
+      flex: 0 0 80px;
+      display: flex;
+      justify-content: flex-end;
+      font-size: 16px;
+      padding: 0 8px 0 0;
+    }
   }
 
   .items-list:last-of-type {
