--- a/scss/pirateborg/_character-sheet.scss
+++ b/scss/pirateborg/_character-sheet.scss
@@ -22,6 +22,16 @@
             margin-left: 4px;
             padding: 2px 8px;
             font-size: 12px;
+            text-align: center;
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+
+            &[disabled] {
+              opacity: 0.4;
+              cursor: not-allowed;
+              pointer-events: none;
+            }
           }
         }
       }
