--- a/templates/actor/creature-sheet.html
+++ b/templates/actor/creature-sheet.html
@@ -40,7 +40,7 @@
   <section class="sheet-body">
     {{! Description Tab }}
     <div class="tab" data-group="primary" data-tab="description">
-      {{editor descriptionHTML target="system.description" button=true owner=owner editable=true}}
+      {{> "systems/pirateborg/templates/common/editor.html" enrichedContent=descriptionHTML sourceContent=descriptionSource documentUuid=documentUuid target="system.description" editable=editable owner=owner editingDescription=editingDescription}}
     </div>
 
     {{! Details Tab }}
