--- a/templates/actor/vehicle-edit-sheet.html
+++ b/templates/actor/vehicle-edit-sheet.html
@@ -27,7 +27,7 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
     <div class="tab" data-group="primary" data-tab="description">
-      {{editor descriptionHTML target="system.description" button=true owner=owner editable=true}}
+      {{> "systems/pirateborg/templates/common/editor.html" enrichedContent=descriptionHTML sourceContent=descriptionSource documentUuid=documentUuid target="system.description" editable=editable owner=owner editingDescription=editingDescription}}
     </div>
 
     <div class="tab equipment-tab" data-group="primary" data-tab="items">
