--- a/css/pirateborg.css
+++ b/css/pirateborg.css
@@ -28,7 +28,7 @@
   --item-font: "Alegreya";
   --compendium-font: "IM Fell English";
   --button-font: "Alegreya";
-  --color-text-hyperlink: var(--foreground-color);
+  --color-text-hyperlink: #0066cc;
   /* foundry core */
   --color-text-light-6: var(--foreground-color);
   --color-text-light-5: var(--foreground-color);
