--- a/scss/pirateborg/_root.scss
+++ b/scss/pirateborg/_root.scss
@@ -42,7 +42,7 @@
 
   --button-font: "Alegreya";
 
-  --color-text-hyperlink: var(--foreground-color);
+  --color-text-hyperlink: #0066cc;
 
   /* foundry core */
   --color-text-light-6: var(--foreground-color);
