--- a/css/pirateborg.css
+++ b/css/pirateborg.css
@@ -1570,39 +1570,27 @@ li.folder > .folder-header {
   --effect-size: 32px;
 }
 #token-hud .status-effects.expanded-details {
-  width: unset;
-  grid-template-columns: repeat(4, 130px);
-  line-height: var(--effect-size);
+  grid-template-columns: repeat(4, max-content);
 }
 #token-hud .status-effect-container {
   cursor: pointer;
-  position: relative;
   padding: 1px;
+  display: flex;
+  align-items: center;
+  gap: 4px;
 }
-#token-hud .status-effect-container .status-effect-control {
-  width: 100%;
+#token-hud .status-effect-container .effect-control {
+  width: var(--effect-size);
   height: var(--effect-size);
-  margin: 0;
-  margin-top: -1px;
-  border-radius: 4px;
-  border: 1px solid transparent;
-  padding: 0;
-  opacity: 0.5;
-  padding-right: calc(100% - var(--effect-size));
 }
 #token-hud .status-effect-container .status-effect-title {
-  vertical-align: top;
   padding-left: 4px;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  margin-right: 6px;
   white-space: nowrap;
-  max-width: calc(100% - var(--effect-size));
-  display: inline-block;
-  pointer-events: none;
-  position: absolute;
-  top: 0px;
-  left: var(--effect-size);
   opacity: 0.6;
+}
+#token-hud .status-effect-container:hover .status-effect-title, #token-hud .status-effect-container:hover .effect-control {
+  opacity: 0.8;
 }
 
 /* ====================== */
