--- a/scss/pirateborg/_foundry-overrides.scss
+++ b/scss/pirateborg/_foundry-overrides.scss
@@ -953,42 +953,32 @@ li.folder > .folder-header {
     --effect-size: 32px;
 
     &.expanded-details {
-      width: unset;
-      grid-template-columns: repeat(4, 130px);
-      line-height: var(--effect-size);
+      grid-template-columns: repeat(4, max-content);
     }
   }
 
   .status-effect-container {
     cursor: pointer;
-    position: relative;
     padding: 1px;
+    display: flex;
+    align-items: center;
+    gap: 4px;
 
-    .status-effect-control {
-      width: 100%;
+    .effect-control {
+      width: var(--effect-size);
       height: var(--effect-size);
-      margin: 0;
-      margin-top: -1px;
-      border-radius: 4px;
-      border: 1px solid transparent;
-      padding: 0;
-      opacity: 0.5;
-      padding-right: calc(100% - var(--effect-size));
     }
 
     .status-effect-title {
-      vertical-align: top;
       padding-left: 4px;
-      overflow: hidden;
-      text-overflow: ellipsis;
+      margin-right: 6px;
       white-space: nowrap;
-      max-width: calc(100% - var(--effect-size));
-      display: inline-block;
-      pointer-events: none;
-      position: absolute;
-      top: 0px;
-      left: var(--effect-size);
       opacity: 0.6;
+    }
+
+    &:hover .status-effect-title,
+    &:hover .effect-control {
+      opacity: 0.8;
     }
   }
 }
